--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Pathfinding/Pathfinding/
 Pathfinding/Capstone-WOR-VR-version-1/
+unit-5/
